[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CPTools"
version = "0.1.0"
description = "Cell Painting utilities for Harmony plate I/O, normalization, and feature selection."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "CPTools contributors" }]
dependencies = [
  "anndata>=0.10",
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
]

[tool.setuptools]
packages = ["CPTools"]
